Project status: Pour présentation.

--- a/SCRIPT/jenkins.conf
+++ b/SCRIPT/jenkins.conf
@@ -10,11 +10,11 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-  server_name     jenkinsapp.centralus.cloudapp.azure.com;  # replace 'jenkins.example.com' with your server domain name
+  server_name     jenkinsapptest.centralus.cloudapp.azure.com;  # replace 'jenkins.example.com' with your server domain name
   listen [::]:443 ssl ipv6only=on; # managed by Certbot
   listen 443 ssl; # managed by Certbot
-  ssl_certificate /etc/letsencrypt/live/jenkinsapp.centralus.cloudapp.azure.com/fullchain.pem; # managed by Certbot
-  ssl_certificate_key /etc/letsencrypt/live/jenkinsapp.centralus.cloudapp.azure.com/privkey.pem; # managed by Certbot
+  ssl_certificate /etc/letsencrypt/live/jenkinsapptest.centralus.cloudapp.azure.com/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/jenkinsapptest.centralus.cloudapp.azure.com/privkey.pem; # managed by Certbot
   include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
@@ -77,13 +77,13 @@ server {
 }
 
 server {
-    if ($host = jenkinsapp.centralus.cloudapp.azure.com) {
+    if ($host = jenkinsapptest.centralus.cloudapp.azure.com) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
 
     listen 80 ;
     listen [::]:80 ;
-    server_name jenkinsapp.centralus.cloudapp.azure.com;
+    server_name jenkinsapptest.centralus.cloudapp.azure.com;
 return 404; # managed by Certbot
 }
